[package]
name = "poof-player"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12.2", default-features = false, features = ["client", "gateway", "voice", "rustls_backend", "http"] }
songbird = { version = "0.4.3", features = ["serenity"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"


